# duo-fastapi-codex

fastapi-modmonolith/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
fastapi-modmonolith/app/: __init__.py  config.py  logging.py  main.py
fastapi-modmonolith/app/modules/blog/: __init__.py
fastapi-modmonolith/app/modules/blog/application/: __init__.py  commands.py  handlers.py  queries.py
fastapi-modmonolith/app/modules/blog/domain/: __init__.py  entities.py  events.py  value_objects.py
fastapi-modmonolith/app/modules/blog/infrastructure/: __init__.py  mappers.py  repository.py
fastapi-modmonolith/app/modules/blog/presentation/: __init__.py
fastapi-modmonolith/app/modules/blog/subscribers/: __init__.py
fastapi-modmonolith/app/modules/users/: __init__.py
fastapi-modmonolith/app/modules/users/application/: __init__.py  commands.py  handlers.py  queries.py
fastapi-modmonolith/app/modules/users/domain/: __init__.py  entities.py  events.py  services.py  value_objects.py
fastapi-modmonolith/app/modules/users/infrastructure/: __init__.py  mappers.py  repository.py
fastapi-modmonolith/app/modules/users/presentation/: __init__.py
fastapi-modmonolith/app/shared/: __init__.py  db.py  events.py  messagebus.py  outbox.py  result.py  uow.py
fastapi-modmonolith/app/shared/security/: __init__.py  crypto.py  oidc.py
fastapi-modmonolith/app/shared/tenancy/: __init__.py  context.py  middleware.py
fastapi-modmonolith/app/worker/: __init__.py  outbox_worker.py
(+6 files in other folders)
