[project]
name = "fastapi-modmonolith"
version = "0.1.0"
description = "FastAPI modular monolith with DDD, in-process events, outbox, tenancy, OIDC hook"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "structlog>=24.1",
  "orjson>=3.10",
  "authlib>=1.3",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "tenacity>=8.5",
  "redis>=5.0",
  "fastapi-limiter>=0.1.6",
  "typing-extensions>=4.12"
]

[tool.uvicorn]
reload = true
factory = false
host = "0.0.0.0"
port = 8000

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
